[package]
name = "rweb"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "./macros", "./" ]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
macros = {path = "./macros" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlElement",
  "HtmlHeadElement",
  "Element",
  "console"
] }

